[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "A sample Python project using Poetry"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.4"
matplotlib = "^3.10.0"
streamlit = "^1.42.2"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
